--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
   </ul>
 </nav>
 
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/q3BeEljzlW0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</video>
+</center>
 
 <div class="container py-4">
 	<div class= "container-fluid">
